[workspace]
resolver = "2"

members = [
  "packages/react/transform",
  "packages/web-platform/inline-style-parser",
  "packages/web-platform/web-style-transformer",
]

[workspace.dependencies]
convert_case = "0.6.0"
dashmap = "5.5.3"
hex = "0.4.3"
indexmap = "2.7.0"
js-sys = "0.3.77"
lazy_static = "1.5.0"
once_cell = "1.20.2"
regex = "1.11.1"
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_json = "1.0.134"
sha-1 = "0.10.1"
swc_core = "39.0.3"
version-compare = "0.2.0"
wasm-bindgen = "0.2.101"

[profile.release]
codegen-units = 1
# debug = true
lto = true
opt-level = "s"
